samples/_failures_safe/1761800916_804634_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0544e532.c: In function ‘main’:
./samples/SAFE/__tmp_0544e532.c:158:9: error: expected declaration or statement at end of input
  158 |         if (choice < 1 || choice > num_ops) {
      |         ^~
./samples/SAFE/__tmp_0544e532.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0544e532.c:158:9: error: expected declaration or statement at end of input
